@@ -106,6 +106,14 @@
 		}
 		
 		/**
+		 * @return HavingProjection
+		**/
+		public static function having(LogicalObject $logic)
+		{
+			return new HavingProjection($logic);
+		}
+		
+		/**
 		 * @return ClassProjection
 		**/
 		public static function clazz($className)
